style.css
.favored{background-color:green; color: white;}
.unfavored{background-color: pink}
.no_data{background-color:gray}
.matchcount { font-size: small; }
table, th, td {
    border: 3px ridge black;
    border-collapse: collapse;
}
.collapse {
    display: none !important;
}

.decklist {
    position: fixed;
    left: 0;
    top: 0;
    width: calc(100% - 20vh);
    height: 80vh;
    border: 10vh solid rgba(0,0,0,0.5);
    background: white;
    padding: 20px;
    overflow: auto;
    font-size: 14px;
}

.decklist .cardimg {
    display: inline-block;
    position: relative;
}

.decklist .cardimg > img {
    display: inline-block;
    width: 125px;
    height: 175px;
}
.decklist .cardimg .quant {
    position: absolute;
    left: 0;
    bottom: 5px;
    padding: 5px;
    margin-left: 25%;
    margin-right: 25%;
    width: calc(50% - 16px);
    background: #333;
    color: white;
    font-weight: bold;
    border-radius: 3px;
    border: 2px solid white;
    text-align: center;
}
.decklist .permalink {
    float: right;
    padding: 5px;
    text-decoration: none;
    font-size: 20px;
}

.permalink:hover {
    text-shadow: #77a 1px 2px 5px
}

.closeX {
    padding: 5px;
    float:right;
    font-size: 20px;
}
.toggle_gfx_btn {
    margin-right: 5px;
    padding: 5px;
    float:right;
    font-size: 20px;
}
.cardcount {
    font-size: 12px;
    font-weight: lighter;
    margin-left: 20px;
}

.match {
    display: inline-block;
    width: 200px;
    margin: 5px;
    border: 2px solid #555;
    border-radius: 3px;
}

.match .player {
    display: flex;
}

.playername, .bye {
    flex: 1;
    padding: 5px;
}

.bye {
    background-color: #bbb;
}

.matchscore {
    flex: 0;
    padding: 5px;
    color: white;
}

.matchscore.winner {
    background-color: #070;
}
.matchscore.loser {
    background-color: #900;
}
.matchscore.tied {
    background-color: #03B;
}

.match .player:first-child {
    border-bottom: 1px solid black;
}

.upset {
    padding: 5px;
}

.elodiff {
    text-align: right;
}

.element-bars {
    display: flex;
}
.archetype {
    flex: 1;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: end;
}
.arche-bar {
    display: inline-block;
    width: 30%;
    border: 2px solid black;
    vertical-align: bottom;
    margin-left: auto;
    margin-right: auto;
}
.archetype h4 {
    margin-top: 0;
    text-align: center;
}
.el-pct {
	text-align: center;
	font-size: smaller;
}

.el-bar.fire {
    background-color: #b30;
}
.el-bar.wind {
    background-color: #6c3;
}
.el-bar.water {
    background-color: #03d;
}
.el-bar.norm {
    background-color: #ba9;
}
.evt {
    border: 2px solid black;
    border-radius: 3px;
    padding: 5px;
    text-decoration: none;
}
.evt h3 {
    margin-top: 0;
}

.evt {
    display: flex;
    position: relative;
    padding-right: 25px;
}

.evt-mainbox {
    flex-grow: 1;
}

.event-category {
    width: 20px;
    height: calc(100% - 8px);
    writing-mode: vertical-rl;
    position: absolute;
    top: 0;
    right: 0;
    padding: 4px 2px 4px 3px;
    color: white;
    background-color: #333;
    font-size: 14px;
}

.event-category.regular {
    color: black;
    background-color: #ccc;
}
.event-category.regionals {
    background-color: #03B;
}
.event-category.store-champs {
    background-color: #297;
}
.event-category.nationals {
    background-color: #811;
}
.event-category.worlds {
    background-color: #973;
}

.season {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-gap: 10px;
    margin-bottom: 100px;
}

.nav-item {
    padding: 5px 15px 5px 0;
}

footer {
    border-top: 1px solid #aaa;
    padding-top: 5px;
    font-size: 13px;
    margin-top: 50px;
}

